start edit equipment

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -300,8 +300,8 @@ K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWra
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck
 K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck
-WBP_Card_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck
-WBP_Board_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck
+WBP_Card_C=
+WBP_Board_C=
 TextBlock=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck
 CommonInputSettings=EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,CommonInputSettings.Input.CommonInputPlatformSettings_Windows
 InputModifierSmoothDelta=
@@ -323,7 +323,7 @@ TakeRecorderMicrophoneAudioSourceSettings=
 TakeRecorderMicrophoneAudioManager=
 MovieSceneAnimationTrackRecorderEditorSettings=
 TakeRecorderWorldSourceSettings=
-BP_PlayerController_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck
+BP_PlayerController_C=
 K2Node_BreakStruct=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck
 EdGraph=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
@@ -404,11 +404,12 @@ clampIntPoint_0=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrappe
 LastLevel=/Game/Map
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -435,7 +436,6 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 OpenAssetsAtExit=/Game/Niagara/NS_Simple.NS_Simple
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Card.WBP_Card
 OpenAssetsAtExit=/Game/Materials/M_TestNiagara.M_TestNiagara
@@ -450,6 +450,7 @@ OpenAssetsAtExit=/Game/Blueprints/STR_CardPosition.STR_CardPosition
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Frame.WBP_Frame
 OpenAssetsAtExit=/Game/Blueprints/BP_PlayerController.BP_PlayerController
 OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall.WBP_FireBall
+OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment.WBP_Equipment
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -462,36 +463,36 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
-MRUItem1=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
-MRUItem2=/Game/Blueprints/utility/BPF_Utility
-MRUItem3=/Game/Blueprints/Widget/WBP_Board2
-MRUItem4=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
-MRUItem5=/Game/Blueprints/Tuto/WBP_CardHand
-MRUItem6=/Game/Blueprints/BP_PlayerController
-MRUItem7=/Game/Blueprints/Widget/WBP_Frame
-MRUItem8=/Game/Blueprints/STR_CardPosition
-MRUItem9=/Game/Blueprints/Widget/WBP_HorizontalBox
-MRUItem10=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_GrippingTapes
-MRUItem11=/Game/Blueprints/Tuto/WBP_SpellCardTuto
-MRUItem12=/Game/Blueprints/Widget/WBP_Board
-MRUItem13=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
-MRUItem14=/Game/Materials/M_TestNiagara_UI
-MRUItem15=/Game/Materials/M_TestNiagara
-MRUItem16=/Game/Blueprints/Widget/WBP_Card
-MRUItem17=/Game/Niagara/NS_Simple
-MRUItem18=/Game/Textures/YellowFrame
-MRUItem19=/Game/Textures/RedFrame
-MRUItem20=/Game/Textures/CardFrame
-MRUItem21=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem22=/Game/Blueprints/Widget/STR_Param
-MRUItem23=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SpearCard
-MRUItem24=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor
-MRUItem25=/Game/Textures/Rogue/Sneack_Attack
-MRUItem26=/Game/Textures/Wizard/Heal
-MRUItem27=/Game/Textures/Warrior/SlashCard
-MRUItem28=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
-MRUItem29=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
+MRUItem0=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
+MRUItem1=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
+MRUItem2=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
+MRUItem3=/Game/Blueprints/utility/BPF_Utility
+MRUItem4=/Game/Blueprints/Widget/WBP_Board2
+MRUItem5=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
+MRUItem6=/Game/Blueprints/Tuto/WBP_CardHand
+MRUItem7=/Game/Blueprints/BP_PlayerController
+MRUItem8=/Game/Blueprints/Widget/WBP_Frame
+MRUItem9=/Game/Blueprints/STR_CardPosition
+MRUItem10=/Game/Blueprints/Widget/WBP_HorizontalBox
+MRUItem11=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_GrippingTapes
+MRUItem12=/Game/Blueprints/Tuto/WBP_SpellCardTuto
+MRUItem13=/Game/Blueprints/Widget/WBP_Board
+MRUItem14=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
+MRUItem15=/Game/Materials/M_TestNiagara_UI
+MRUItem16=/Game/Materials/M_TestNiagara
+MRUItem17=/Game/Blueprints/Widget/WBP_Card
+MRUItem18=/Game/Niagara/NS_Simple
+MRUItem19=/Game/Textures/YellowFrame
+MRUItem20=/Game/Textures/RedFrame
+MRUItem21=/Game/Textures/CardFrame
+MRUItem22=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem23=/Game/Blueprints/Widget/STR_Param
+MRUItem24=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SpearCard
+MRUItem25=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor
+MRUItem26=/Game/Textures/Rogue/Sneack_Attack
+MRUItem27=/Game/Textures/Wizard/Heal
+MRUItem28=/Game/Textures/Warrior/SlashCard
+MRUItem29=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -1803,7 +1804,7 @@ WBP_SlashCard_C=
 WBP_Protection_C=
 WBP_ThunderBolt_C=
 NiagaraSystemWidget="\"Object.Niagara UI Renderer.MaterialRemapList\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-WBP_Equipment_C="\"Object.CardParam\" "
+WBP_Equipment_C=
 WBP_FireBall_C=
 WBP_Heal_C=
 WBP_Ambush_C="\"Object.CardParam\" "
@@ -1871,7 +1872,7 @@ Spacer="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
 /Game/Textures/CardFrame.CardFrame=1
 /Game/Blueprints/Widget/WBP_Board2.WBP_Board2=1
-/Game/Blueprints/utility/BPF_Utility.BPF_Utility=1
+/Game/Blueprints/utility/BPF_Utility.BPF_Utility=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3186,6 +3187,7 @@ InstalledPlugins=WMFCodecs
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
