--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -301,7 +301,7 @@ K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWra
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 WBP_Card_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-WBP_Board_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+WBP_Board_C=
 TextBlock=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck
 CommonInputSettings=EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,CommonInputSettings.Input.CommonInputPlatformSettings_Windows
 InputModifierSmoothDelta=
@@ -418,9 +418,7 @@ DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -430,6 +428,8 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=Niagara
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
@@ -471,20 +471,20 @@ bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SpearCard
-MRUItem1=/Game/Blueprints/Widget/WBP_Board2
-MRUItem2=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
-MRUItem3=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
-MRUItem4=/Game/Blueprints/BP_PlayerController
-MRUItem5=/Game/Blueprints/Widget/WBP_Frame
-MRUItem6=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection
-MRUItem7=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
-MRUItem8=/Game/Blueprints/Tuto/WBP_SpellCardTuto
-MRUItem9=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
-MRUItem10=/Game/Blueprints/Widget/WBP_Board
-MRUItem11=/Game/Materials/M_TestNiagara_UI
-MRUItem12=/Game/Materials/M_TestNiagara
-MRUItem13=/Game/Blueprints/Widget/WBP_Card
-MRUItem14=/Game/Niagara/NS_Simple
+MRUItem1=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
+MRUItem2=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
+MRUItem3=/Game/Blueprints/BP_PlayerController
+MRUItem4=/Game/Blueprints/Widget/WBP_Frame
+MRUItem5=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection
+MRUItem6=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
+MRUItem7=/Game/Blueprints/Tuto/WBP_SpellCardTuto
+MRUItem8=/Game/Blueprints/Widget/WBP_Board
+MRUItem9=/Game/Materials/M_TestNiagara_UI
+MRUItem10=/Game/Materials/M_TestNiagara
+MRUItem11=/Game/Blueprints/Widget/WBP_Card
+MRUItem12=/Game/Niagara/NS_Simple
+MRUItem13=/Game/Blueprints/Widget/WBP_Board2
+MRUItem14=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
 MRUItem15=/Game/Textures/Warrior/EquipmentCard
 MRUItem16=/Game/Textures/Warrior/ProtectionCard
 MRUItem17=/Game/Textures/Warrior/SpearCard
@@ -1760,16 +1760,16 @@ RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraAc
 [DetailPropertyExpansion]
 CameraActor="\"Object.CameraActor.CameraComponent.Object.PostProcess.PostProcessSettings\" "
 Image="\"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget=
+Visual=
+Object=
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_Array_C=
-UserWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-WBP_Card_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+UserWidget=
+WBP_Card_C=
 SizeBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.DisabledForeground\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Overlay="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1797,11 +1797,11 @@ DebugCameraControllerSettings="\"Object.General.CycleViewModes\" "
 CommonHierarchicalScrollBox="\"Object.Render Transform.RenderTransform\" "
 ScrollBox="\"Object.Render Transform.RenderTransform\" "
 WBP_CommonWidget_C="\"Object.Render Transform.RenderTransform\" "
-CommonUserWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+CommonUserWidget=
 WBP_CommonActivableWidget_C="\"Object.Render Transform.RenderTransform\" "
 CommonActivatableWidget="\"Object.Render Transform.RenderTransform\" "
 SafeZone="\"Object.Render Transform.RenderTransform\" "
-WBP_SpellCardTuto_C=
+WBP_SpellCardTuto_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_CardHand_C=
 WBP_CardHUD_C=
 BP_PlayerController_C=
@@ -1810,10 +1810,10 @@ Controller=
 NewWidgetBlueprint_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_SlayCard_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_SlashCard_C=
-WBP_Protection_C=
+WBP_Protection_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_ThunderBolt_C=
 NiagaraSystemWidget="\"Object.Niagara UI Renderer.MaterialRemapList\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-WBP_Equipment_C=
+WBP_Equipment_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_FireBall_C=
 WBP_Heal_C=
 WBP_Ambush_C="\"Object.CardParam\" "
@@ -1822,6 +1822,7 @@ WBP_Hide_C=
 WBP_Frame_C=
 WBP_test_C=
 Spacer="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+WBP_SpearCard_C=
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_CardType.E_CardType=0
@@ -1908,8 +1909,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -3126,8 +3127,8 @@ NiagaraUIRendererEditor.LastCompileMethod=External
 
 [Python]
 LastDirectory=
-RecentsFiles=E:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=E:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MessageLog]
 LastLogListing=PIE
@@ -3202,6 +3203,7 @@ InstalledPlugins=WMFCodecs
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
