fix set target on spear spell (and maybe other)

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -357,7 +357,7 @@ AddRandomCards_13=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrap
 K2Node_CallParentFunction=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Image=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck
 SetTarget=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-SetTarget_6=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+SetTarget_6=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_FormatText=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 WBP_Protection_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 WBP_Equipment_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
@@ -413,7 +413,7 @@ Move_5=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.Default
 LastLevel=/Game/Map
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -460,6 +460,7 @@ OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide.WBP_Hide
 OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SpearCard.WBP_SpearCard
 OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt.WBP_ThunderBolt
 OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall.WBP_FireBall
+OpenAssetsAtExit=/Game/Blueprints/Tuto/WBP_CardHand.WBP_CardHand
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -472,25 +473,25 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
-MRUItem1=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
-MRUItem2=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SpearCard
-MRUItem3=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
-MRUItem4=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
-MRUItem5=/Game/Blueprints/BP_PlayerController
-MRUItem6=/Game/Blueprints/Widget/WBP_Frame
-MRUItem7=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection
-MRUItem8=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
-MRUItem9=/Game/Blueprints/Tuto/WBP_SpellCardTuto
-MRUItem10=/Game/Blueprints/Widget/WBP_Board
-MRUItem11=/Game/Materials/M_TestNiagara_UI
-MRUItem12=/Game/Materials/M_TestNiagara
-MRUItem13=/Game/Blueprints/Widget/WBP_Card
-MRUItem14=/Game/Niagara/NS_Simple
-MRUItem15=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem16=/Game/Blueprints/STR_FramePositionToMove
-MRUItem17=/Game/Blueprints/STR_CardPosition
-MRUItem18=/Game/Blueprints/Tuto/WBP_CardHand
+MRUItem0=/Game/Blueprints/Tuto/WBP_CardHand
+MRUItem1=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
+MRUItem2=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
+MRUItem3=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SpearCard
+MRUItem4=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
+MRUItem5=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
+MRUItem6=/Game/Blueprints/BP_PlayerController
+MRUItem7=/Game/Blueprints/Widget/WBP_Frame
+MRUItem8=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection
+MRUItem9=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
+MRUItem10=/Game/Blueprints/Tuto/WBP_SpellCardTuto
+MRUItem11=/Game/Blueprints/Widget/WBP_Board
+MRUItem12=/Game/Materials/M_TestNiagara_UI
+MRUItem13=/Game/Materials/M_TestNiagara
+MRUItem14=/Game/Blueprints/Widget/WBP_Card
+MRUItem15=/Game/Niagara/NS_Simple
+MRUItem16=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem17=/Game/Blueprints/STR_FramePositionToMove
+MRUItem18=/Game/Blueprints/STR_CardPosition
 MRUItem19=/Game/Blueprints/Widget/WBP_Board2
 MRUItem20=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
 MRUItem21=/Game/Textures/Warrior/EquipmentCard
